add padding and a translucent img background to contentContainer divs

--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,8 @@
     font-family: Simple;
     src: url(fonts/Simple.ttf);
   }
-.heading {
-  color: white
+.heading, input {
+  margin-bottom: 4%;
 }
   #usernameCanvas, #levelCanvas {
     background-image: url(images/bg.png);
@@ -42,21 +42,32 @@
   .canvas {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 250px 1fr;
+    grid-template-rows: 150px 1fr 150px;
     justify-content: center;
-    justify-items: center
+    justify-items: center;
+    align-content: center;
+    align-items: center;
 
 
   }
 
+#submitButton {
+  margin-left: 2%;
+}
 
+select {
+  text-align: center;
+  min-width: 130px
+}
 .button {
   margin: 2%;
-  margin-left: 13%;
+  margin-left: 35%;
 }
 .contentContainer{
   grid-column: 2/3;
   grid-row: 2/3;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 10%
 }
 
   h2 {
