--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
-  /*padding for help button and top row (heading and play/pasue buttons)*/
+  /*padding for help button, delete button, top row of buttons and title*/
   #help {
     padding: 1%;
   }
-  #deleteButton{
+
+  #deleteButton {
     padding: 1%;
   }
 
@@ -21,27 +22,28 @@
     font-family: Simple;
     src: url(fonts/Simple.ttf);
   }
-.heading, input {
-  margin-bottom: 4%;
-}
-  #usernameCanvas, #levelCanvas {
-    background-image: url(images/bg.png);
-    background-size:cover;
-    background-repeat: no-repeat;
-    min-height: 600px
 
+/*margins for input fields and headings*/
+  .heading, input {
+    margin-bottom: 4%;
   }
 
-
+/*background images for level and username fields*/
+  #usernameCanvas, #levelCanvas {
+    background-image: url(images/bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 600px
+  }
 
   /*grid layout. pixel values are used for the centre most divs since these will containing the title and the play/pause buttons. If fraction values are used, the title and buttons will misalign with the canvas because the canvas doesn't stretch - it stays at 600px*/
   #container {
     display: grid;
     grid-template-columns: 1fr 300px 297px 1fr;
     grid-gap: 3px;
-
   }
 
+  /*grid layout for game canvas, level and username fields. centering items in the grid.*/
   .canvas {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
@@ -50,29 +52,34 @@
     justify-items: center;
     align-content: center;
     align-items: center;
-
-
   }
 
-#levelButton {
-  margin-left: 2%;
-}
+  /*margins for levels button*/
+  #levelButton {
+    margin-left: 2%;
+  }
 
-select {
-  text-align: center;
-  min-width: 130px
-}
-.button {
-  margin: 2%;
-  margin-left: 35%;
-}
-.contentContainer{
-  grid-column: 2/3;
-  grid-row: 2/3;
-  background-color: rgba(255, 255, 255, 0.5);
-  padding: 10%
-}
+  /*centering and sizes for dropdown  menu*/
+  select {
+    text-align: center;
+    min-width: 130px
+  }
 
+  /*margins for buttons*/
+  .button {
+    margin: 2%;
+    margin-left: 35%;
+  }
+
+  /*positioning username and level containers in grid. adding padding and background*/
+  .contentContainer {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 10%
+  }
+
+  /*aligning headings*/
   h2 {
     text-align: center;
   }
@@ -84,26 +91,27 @@ select {
     width: 30px;
     font-size: 20px;
   }
-#exitButton{
-  margin-top: 0;
-  display: inline-block;
-  height: 25px;
-  width: 30px;
-  font-size: 20px;
-}
+
+  /*formatting for exit buttons*/
+  #exitButton {
+    margin-top: 0;
+    display: inline-block;
+    height: 25px;
+    width: 30px;
+    font-size: 20px;
+  }
+
   /*positioning divs in the grid layout*/
   .title {
     grid-row: 1/2;
     grid-column: 2/3;
     text-align: left;
-
   }
 
   .buttons {
     grid-row: 1/2;
     grid-column: 3/4;
     text-align: right;
-
   }
 
   .canvas {
@@ -116,9 +124,11 @@ select {
     grid-column: 2/4;
     margin-top: 2%;
   }
-#deleteButton{
-  margin-left: 83%;
-}
+
+  /*margin for delete button*/
+  #deleteButton {
+    margin-left: 83%;
+  }
 
   /*margin, paddings and fonts for whole page*/
   * {
